--- a/cloud_run_modeling/modeling/dbt_project.yml
+++ b/cloud_run_modeling/modeling/dbt_project.yml
@@ -31,5 +31,5 @@ clean-targets:         # directories to be removed by `dbt clean`
 # directory as views. These settings can be overridden in the individual model
 # files using the `{{ config(...) }}` macro.
 models:
-  +materialized: view
+  +materialized: table
 
