fix a data test when adding the manager in position of player

--- a/cloud_run_modeling/modeling/models/properties.yml
+++ b/cloud_run_modeling/modeling/models/properties.yml
@@ -20,7 +20,7 @@ sources:
             description: Position of the player
             tests:
               - accepted_values: 
-                  values: [1, 2, 3, 4]
+                  values: [1, 2, 3, 4, 5]
                   quote: false
           - name: team_id
             description: Identifier for the team
